--- a/docs/source/fables/狗.md
+++ b/docs/source/fables/狗.md
@@ -11,11 +11,13 @@
 :class: tip
 > 恶名常被误认为美誉。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio3_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio3_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE MISCHIEVOUS DOG
@@ -26,11 +28,13 @@ There was once a Dog who used to snap at people and bite them without any provoc
 :class: tip
 > Notoriety is often mistaken for fame.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio3.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio3.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -45,11 +49,13 @@ There was once a Dog who used to snap at people and bite them without any provoc
 :class: tip
 > 判定事物的好坏 ,不完全取决于速度 ,而要看本质的好坏。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio7_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio7_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE DOG AND THE SOW
@@ -60,11 +66,13 @@ A Dog and a Sow were arguing and each claimed that its own young ones were finer
 :class: tip
 > The best defence is a good offence.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio7.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio7.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -79,11 +87,13 @@ A Dog and a Sow were arguing and each claimed that its own young ones were finer
 :class: tip
 > 每一个人都有各自的特点,都有适合自己的工作,也有不适合自己的工作,与其盲目地模仿别人,不如专心致志干好自己的本行。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio31_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio31_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND THE LAP-DOG
@@ -94,11 +104,13 @@ There was once a man who had an Ass and a Lap-dog. The Ass was housed in the sta
 :class: tip
 > It is wise to be content with one's station in life and avoid foolishly attempting to emulate others.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio31.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio31.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -113,11 +125,13 @@ There was once a man who had an Ass and a Lap-dog. The Ass was housed in the sta
 :class: tip
 > 享用借花献佛的恩惠是要付出代价的。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio52_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio52_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE DOG AND THE COOK
@@ -128,11 +142,13 @@ A rich man once invited a number of his friends and acquaintances to a banquet. 
 :class: tip
 > Be shy of favours bestowed at the expense of others.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio52.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio52.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -147,11 +163,13 @@ A rich man once invited a number of his friends and acquaintances to a banquet. 
 :class: tip
 > 自私从来就不会带来好的结果。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio71_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio71_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE DOG IN THE MANGER
@@ -162,11 +180,13 @@ A Dog was lying in a Manger on the hay which had been put there for the cattle, 
 :class: tip
 > Don't be selfish with resources that could benefit others.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio71.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio71.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -181,11 +201,13 @@ A Dog was lying in a Manger on the hay which had been put there for the cattle, 
 :class: tip
 > 准备旅行的人常会等待他人，而有时候可能是自己才是最后一位准备好的人。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio84_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio84_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE TRAVELLER AND HIS DOG
@@ -196,11 +218,13 @@ A Traveller was about to start on a journey, and said to his Dog, who was stretc
 :class: tip
 > Always be ready to follow the lead of those you trust.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio84.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio84.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -215,11 +239,13 @@ A Traveller was about to start on a journey, and said to his Dog, who was stretc
 :class: tip
 > 不卖力工作的人理应挨饿。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio91_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio91_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE BLACKSMITH AND HIS DOG
@@ -230,11 +256,13 @@ A Blacksmith had a little Dog, which used to sleep when his master was at work, 
 :class: tip
 > Those who will not work deserve to starve.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio91.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio91.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -249,11 +277,13 @@ A Blacksmith had a little Dog, which used to sleep when his master was at work, 
 :class: tip
 > 不要追求那些不可能实现的事情，有时候我们更应该珍惜自己拥有的一切。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio93_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio93_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE DOG AND THE SHADOW
@@ -264,11 +294,13 @@ A Dog was crossing a plank bridge over a stream with a piece of meat in his mout
 :class: tip
 > It is better to be content with what you have than to risk it all for something that may not be real.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio93.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio93.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -283,11 +315,13 @@ A Dog was crossing a plank bridge over a stream with a piece of meat in his mout
 :class: tip
 > 寓意：即使老年失去了年轻时的力气，也不要忘记过去的贡献，珍惜老朋友，把应有的尊重和感恩给予他们。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio124_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio124_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE OLD HOUND
@@ -298,11 +332,13 @@ A Hound who had served his master well for years, and had run down many a quarry
 :class: tip
 > Treat those who have served you loyally with kindness and respect, even if they cannot continue to be as useful as they once were.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio124.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio124.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -317,11 +353,13 @@ A Hound who had served his master well for years, and had run down many a quarry
 :class: tip
 > 两面派可不是你的朋友。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio129_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio129_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE HOUND AND THE HARE
@@ -332,11 +370,13 @@ A young Hound started a Hare, and, when he caught her up, would at one moment sn
 :class: tip
 > He is no friend who plays double.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio129.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio129.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -351,11 +391,13 @@ A young Hound started a Hare, and, when he caught her up, would at one moment sn
 :class: tip
 > 这篇文章的寓意是：别总是贬低他人，要明白为何他人会有所作为，有时正是为了生存，而不是只为一时的利益。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio138_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio138_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE HARE AND THE HOUND
@@ -366,11 +408,13 @@ A Hound started a Hare from her form, and pursued her for some distance; but as 
 :class: tip
 > Never put yourself in harm's way for material gain – it is better to focus on preserving your safety and wellbeing.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio138.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio138.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -385,11 +429,13 @@ A Hound started a Hare from her form, and pursued her for some distance; but as 
 :class: tip
 > 这篇文章暗示，应当注意不要不同群体之间出现差异思维，只有把不同人的观点放在一起，才能有更全面深入的理解。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio204_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio204_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND THE DOG
@@ -401,11 +447,13 @@ The Dog was a good deal bored with listening to all this, till at last his impat
 :class: tip
 > The moral of this story is that sometimes what we think is important can be insignificant to others. We should not make assumptions about what someone else might or might not value.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio204.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio204.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -420,11 +468,13 @@ The Dog was a good deal bored with listening to all this, till at last his impat
 :class: tip
 > 这篇文章的寓意是：要感谢那些保护我们的人，他们能够确保我们的安全、提供我们舒适的生活环境，而不是抱怨他们给予不同的待遇。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio208_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio208_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE SHEEP AND THE DOG
@@ -435,11 +485,13 @@ Once upon a time the Sheep complained to the shepherd about the difference in hi
 :class: tip
 > Moral of the story: Appreciate those who protect you and look out for you.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio208.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio208.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -454,11 +506,13 @@ Once upon a time the Sheep complained to the shepherd about the difference in hi
 :class: tip
 > 寓意是：人们在拯救他人时要看清事实，如果对方已经决定放弃生命，不要强行拯救，只会伤害自己。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio212_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio212_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE GARDENER AND HIS DOG
@@ -469,11 +523,13 @@ A Gardner's Dog fell into a deep well, from which his master used to draw water 
 :class: tip
 > The moral of this story is that one should be careful not to misinterpret another's intentions, as our assumptions can lead to hurtful results.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio212.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio212.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -488,11 +544,13 @@ A Gardner's Dog fell into a deep well, from which his master used to draw water 
 :class: tip
 > 本文传达的寓意是: 人类应该学会像接纳动物一样，遇到任何困难时，都应该有一颗热忱的心，以及善待他人的意愿，不断努力提升自己，在不同阶段赋予自己特殊品质，享受生活中的每一个瞬间，乐于施舍和互助，一起走遍每一个漫长而又不可替代的人生阶段。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio231_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio231_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE MAN, THE HORSE, THE OX, AND THE DOG
@@ -503,11 +561,13 @@ One winter's day, during a severe storm, a Horse, an Ox, and a Dog came and begg
 :class: tip
 > The moral of this story is that we can learn from others and that all ages have their own unique qualities and strengths. We should never underestimate the value of sharing experiences and being kind to one another, no matter what age or stage of life we are in.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio231.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio231.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -522,11 +582,13 @@ One winter's day, during a severe storm, a Horse, an Ox, and a Dog came and begg
 :class: tip
 > 寓意：不要把目标定得太高，要在自己的能力范围内实现。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio242_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio242_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE DOGS AND THE HIDES
@@ -537,11 +599,13 @@ Once upon a time a number of Dogs, who were famished with hunger, saw some Hides
 :class: tip
 > The moral of the story is that it is important to consider the long-term consequences of our actions. Too much of anything, even something that may seem beneficial in the short-term, can lead to disastrous outcomes if we are not careful.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio242.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio242.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -556,11 +620,13 @@ Once upon a time a number of Dogs, who were famished with hunger, saw some Hides
 :class: tip
 > 寓意:不要僵持不前，要抓住机会改变局面，避免不幸的命运从你身上发生。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio246_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio246_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE FARMER AND HIS DOGS
@@ -571,11 +637,13 @@ A Farmer was snowed up in his farmstead by a severe storm, and was unable to go 
 :class: tip
 > The moral of this story is 'look out for yourself and be prepared for the worst'.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio246.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio246.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -590,11 +658,13 @@ A Farmer was snowed up in his farmstead by a severe storm, and was unable to go 
 :class: tip
 > 这篇文章寓意是：忠诚的行为会得到丰厚的回报，尽管会遇到诱惑和挑战。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio335_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio335_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE DOG AND HIS MASTER'S DINNER
@@ -605,11 +675,13 @@ A Dog had learned to carry his master's dinner to him every day. He was very fai
 :class: tip
 > Do not stop to argue with temptation.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio335.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio335.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -624,11 +696,13 @@ A Dog had learned to carry his master's dinner to him every day. He was very fai
 :class: tip
 > 这篇文章的寓意是：不可能有过于荒谬的想法。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio341_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio341_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE DOGS AND THE HIDES
@@ -639,11 +713,13 @@ Some hungry Dogs saw a number of hides at the bottom of a stream where the Tanne
 :class: tip
 > Do not try to do impossible things.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio341.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio341.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -658,11 +734,13 @@ Some hungry Dogs saw a number of hides at the bottom of a stream where the Tanne
 :class: tip
 > 寓意是：贪婪会阻碍你分享美好的事物，最终反而会让你难以得到真正的快乐。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio347_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio347_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE DOG IN THE MANGER
@@ -673,11 +751,13 @@ A Dog asleep in a manger filled with hay, was awakened by the Cattle, which came
 :class: tip
 > Do not grudge others what you cannot enjoy yourself.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio347.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio347.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -692,11 +772,13 @@ A Dog asleep in a manger filled with hay, was awakened by the Cattle, which came
 :class: tip
 > 寓意: 贪婪只会造成苦恼，要学会区分不同的事物时机并适度把握。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio366_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio366_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE DOG AND THE OYSTER
@@ -707,11 +789,13 @@ There was once a Dog who was very fond of eggs. He visited the hen house very of
 :class: tip
 > Act in haste and repent at leisure - and often in pain.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio366.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio366.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -726,11 +810,13 @@ There was once a Dog who was very fond of eggs. He visited the hen house very of
 :class: tip
 > 这篇文章的寓意是：有时候，被偏爱的感觉会让人不舒服，但我们也要学会接受，学会为他人感到喜悦，并且珍惜被更多关注的机会。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio378_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio378_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND THE LAP DOG
@@ -741,11 +827,13 @@ There was once an Ass whose Master also owned a Lap Dog. This Dog was a favorite
 :class: tip
 > Behavior that is regarded as agreeable in one is very rude and impertinent in another.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio378.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio378.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -760,11 +848,13 @@ There was once an Ass whose Master also owned a Lap Dog. This Dog was a favorite
 :class: tip
 > 这篇文章寓意：做任何事情要注重谨慎，别太抢眼，太张扬反而会把人们吓到，而不是让他们佩服你。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio388_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio388_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE MISCHIEVOUS DOG
@@ -775,11 +865,13 @@ There was once a Dog who was so ill-natured and mischievous that his Master had 
 :class: tip
 > Notoriety is not fame.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio388.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio388.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -794,11 +886,13 @@ There was once a Dog who was so ill-natured and mischievous that his Master had 
 :class: tip
 > 这篇文章寓意：贪婪会让你失去真正的东西，努力寻求更多的事物只能带来空洞的满足，如果我们能够停下来仔细思考，就会明白自己什么才是真正珍贵的。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio403_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio403_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE DOG AND HIS REFLECTION
@@ -809,11 +903,13 @@ A Dog, to whom the butcher had thrown a bone, was hurrying home with his prize a
 :class: tip
 > It is very foolish to be greedy.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio403.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio403.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
