--- a/docs/source/fables/猫.md
+++ b/docs/source/fables/猫.md
@@ -11,11 +11,13 @@
 :class: tip
 > 如果有足够的智慧，面对那些曾认定的危险人物所假装出的无辜，你也不会上当受骗。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio2_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio2_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE CAT AND THE MICE
@@ -26,11 +28,13 @@ There was once a house that was overrun with Mice. A Cat heard of this, and said
 :class: tip
 > If you are wise you won't be deceived by the innocent airs of those whom you have once found to be dangerous.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio2.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio2.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -45,11 +49,13 @@ There was once a house that was overrun with Mice. A Cat heard of this, and said
 :class: tip
 > 骗子会伪装自己，但决骗不过聪明人。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio12_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio12_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE CAT AND THE BIRDS
@@ -60,11 +66,13 @@ A Cat heard that the Birds in an aviary were ailing. So he got himself up as a d
 :class: tip
 > A villain may disguise himself, but he will not deceive the wise.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio12.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio12.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -79,11 +87,13 @@ A Cat heard that the Birds in an aviary were ailing. So he got himself up as a d
 :class: tip
 > 要仔细观察环境并拥有敏锐的观察力，以免上当受骗，犯下不可弥补的错误。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio59_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio59_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE OWL AND THE BIRDS
@@ -94,11 +104,13 @@ The Owl is a very wise bird; and once, long ago, when the first oak sprouted in 
 :class: tip
 > Heed wise counsel, lest you suffer the consequences of your folly.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio59.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio59.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -113,11 +125,13 @@ The Owl is a very wise bird; and once, long ago, when the first oak sprouted in 
 :class: tip
 > 带有好借口的欲望，永远不会让坏人免于恶行。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio114_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio114_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE CAT AND THE COCK
@@ -128,11 +142,13 @@ A Cat pounced on a Cock, and cast about for some good excuse for making a meal o
 :class: tip
 > The want of a good excuse never kept a villain from crime.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio114.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio114.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -147,11 +163,13 @@ A Cat pounced on a Cock, and cast about for some good excuse for making a meal o
 :class: tip
 > 这篇文章揭示了诡计阴险的危险，只有诚实和互信才能保证我们的幸福与安宁。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio133_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio133_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE EAGLE, THE CAT,AND THE WILD SOW
@@ -162,11 +180,13 @@ An Eagle built her nest at the top of a high tree; a Cat with her family occupie
 :class: tip
 > The moral of this story is to be wary of trusting those who make false claims for their own benefit. Manipulating the truth can lead to disastrous consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio133.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio133.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -181,11 +201,13 @@ An Eagle built her nest at the top of a high tree; a Cat with her family occupie
 :class: tip
 > 这篇文章的寓意是：即使发生了惊人的改变，本性难移，要保持自我，不要迷失自我。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio145_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio145_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## VENUS AND THE CAT
@@ -196,11 +218,13 @@ A Cat fell in love with a handsome young man, and begged the goddess Venus to ch
 :class: tip
 > The moral of this story is to be careful what you wish for, as it may not lead to the outcome you desire.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio145.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio145.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -215,11 +239,13 @@ A Cat fell in love with a handsome young man, and begged the goddess Venus to ch
 :class: tip
 > 这篇文章寓意是：当遇到困扰，聪明人会想出一个狡猾的解决方案来解决问题，以及及早采取行动是解决难题的关键。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio153_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio153_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE GRASSHOPPER AND THE OWL
@@ -231,11 +257,13 @@ Addressing herself to the Grasshopper, she said in her pleasantest manner, "As I
 :class: tip
 > Moral: Do not be deceived by flattery; it can lead to dire consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio153.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio153.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -250,11 +278,13 @@ Addressing herself to the Grasshopper, she said in her pleasantest manner, "As I
 :class: tip
 > 这篇文章的寓意是：不要滥用特权，新人要尊重老人，面对新环境也要懂得适应。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio239_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio239_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE PARROT AND THE CAT
@@ -265,11 +295,13 @@ A Man once bought a Parrot and gave it the run of his house. It revelled in its 
 :class: tip
 > Moral of the story: Speak with respect at all times, because the way you talk can shape the way others perceive and treat you.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio239.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio239.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -286,11 +318,13 @@ A Man once bought a Parrot and gave it the run of his house. It revelled in its 
 
 这篇文章的寓意是：只有团结合作，才能突破困境。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio284_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio284_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## BELLING THE CAT
@@ -301,11 +335,13 @@ The Mice once called a meeting to decide on a plan to free themselves of their e
 :class: tip
 > It is one thing to say that something should be done, but quite a different matter to do it.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio284.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio284.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -320,11 +356,13 @@ The Mice once called a meeting to decide on a plan to free themselves of their e
 :class: tip
 > 这篇文章寓意是: 不管做什么，勇气和有趣的想法是成功的关键。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio339_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio339_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE MONKEY AND THE CAT
@@ -335,11 +373,13 @@ Once upon a time a Cat and a Monkey lived as pets in the same house. They were g
 :class: tip
 > The flatterer seeks some benefit at your expense.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio339.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio339.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -354,11 +394,13 @@ Once upon a time a Cat and a Monkey lived as pets in the same house. They were g
 :class: tip
 > 这篇文章提醒我们，没有经验的人应该慎重冒险，因为不可预测的风险可能会影响到他们的安全。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio352_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio352_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE CAT, THE COCK, AND THE YOUNG MOUSE
@@ -369,11 +411,13 @@ A very young Mouse, who had never seen anything of the world, almost came to gri
 :class: tip
 > Do not trust alone to outward appearances.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio352.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio352.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -388,11 +432,13 @@ A very young Mouse, who had never seen anything of the world, almost came to gri
 :class: tip
 > 需要献出爱心，去帮助那些需要帮助的人，而不忘记自己也要给自己充足的养分。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio365_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio365_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE CAT AND THE BIRDS
@@ -403,11 +449,13 @@ A Cat was growing very thin. As you have guessed, he did not get enough to eat. 
 :class: tip
 > Be wise and shun the quack.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio365.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio365.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -422,11 +470,13 @@ A Cat was growing very thin. As you have guessed, he did not get enough to eat. 
 :class: tip
 > 这篇文章蕴含的寓意是：聪明的打算总能战胜无知，智慧必胜力量。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio407_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio407_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE CAT AND THE OLD RAT
@@ -437,11 +487,13 @@ There was once a Cat who was so watchful, that a Mouse hardly dared show the tip
 :class: tip
 > The wise do not let themselves be tricked a second time.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio407.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio407.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
