--- a/docs/source/fables/青蛙.md
+++ b/docs/source/fables/青蛙.md
@@ -11,11 +11,13 @@
 :class: tip
 > 人们应该学会尊重他人，懂得保护他人的权利，不要肆意破坏他人的生活环境。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio20_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio20_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE BOYS AND THE FROGS
@@ -26,11 +28,13 @@ Some mischievous Boys were playing on the edge of a pond, and, catching sight of
 :class: tip
 > we should always respect the life of creatures that are different from us and be mindful of the consequences of our actions.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio20.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio20.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -45,11 +49,13 @@ Some mischievous Boys were playing on the edge of a pond, and, catching sight of
 :class: tip
 > 不要因为一些不愉快和挫折就去逃避,适当的时候我们可以想想还有很多不如我们的人,我们应该努力,改正自己的不足,增加自信感。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio24_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio24_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE HARES AND THE FROGS
@@ -60,11 +66,13 @@ The Hares once gathered together and lamented the unhappiness of their lot, expo
 :class: tip
 > It is important to recognize that others may be more scared of you than you are of them, and that being brave may help you overcome difficulties.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio24.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio24.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -79,11 +87,13 @@ The Hares once gathered together and lamented the unhappiness of their lot, expo
 :class: tip
 > 毫无根据的抱怨,只会惹人耻笑。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio33_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio33_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE FROGS' COMPLAINT AGAINST THE SUN
@@ -94,11 +104,13 @@ Once upon a time the Sun was about to take to himself a wife. The Frogs in terro
 :class: tip
 > Watch the actions of your enemy.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio33.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio33.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -113,11 +125,13 @@ Once upon a time the Sun was about to take to himself a wife. The Frogs in terro
 :class: tip
 > 要医人，先医己。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio64_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio64_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE QUACK FROG
@@ -128,11 +142,13 @@ Once upon a time a Frog came forth from his home in the marshes and proclaimed t
 :class: tip
 > Physician, heal thyself.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio64.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio64.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -147,11 +163,13 @@ Once upon a time a Frog came forth from his home in the marshes and proclaimed t
 :class: tip
 > 要学会多为他人考虑一下，不能只考虑自己的得失利益。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio66_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio66_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE MOUSE, THE FROG, AND THE HAWK
@@ -162,11 +180,13 @@ A Mouse and a Frog struck up a friendship; they were not well mated, for the Mou
 :class: tip
 > It is important to recognize the limits of a relationship and to act within those limits for the safety and well-being of both parties.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio66.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio66.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -181,11 +201,13 @@ A Mouse and a Frog struck up a friendship; they were not well mated, for the Mou
 :class: tip
 > 莽撞的请求常常会带来反作用，你所得到的正是你自己所请求的，但未必会是你想要的结果。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio75_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio75_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE FROGS ASKING FOR A KING
@@ -197,11 +219,13 @@ Thinking that a King of that sort was an insult to their dignity, they sent to J
 :class: tip
 > When you seek to change your condition, be sure that you can better it.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio75.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio75.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -216,11 +240,13 @@ Thinking that a King of that sort was an insult to their dignity, they sent to J
 :class: tip
 > 自量力的人，最终会惨遭失败。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio99_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio99_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE OX AND THE FROG
@@ -231,11 +257,13 @@ Two little Frogs were playing about at the edge of a pool when an Ox came down t
 :class: tip
 > Pride comes before a fall.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio99.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio99.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -250,11 +278,13 @@ Two little Frogs were playing about at the edge of a pool when an Ox came down t
 :class: tip
 > 本文突出的是：经常换个环境，保护自己的安全，不要停留在同一个地方，避免造成不必要的损失。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio156_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio156_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE TWO FROGS
@@ -265,11 +295,13 @@ Two Frogs were neighbours. One lived in a marsh, where there was plenty of water
 :class: tip
 > Moral: Change can be uncomfortable, but it can also save your life.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio156.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio156.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -284,11 +316,13 @@ Two Frogs were neighbours. One lived in a marsh, where there was plenty of water
 :class: tip
 > 凡事应三思而后行。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio200_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio200_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE FROGS AND THE WELL
@@ -299,11 +333,13 @@ Two Frogs lived together in a marsh. But one hot summer the marsh dried up, and 
 :class: tip
 > Think twice before you act.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio200.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio200.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -318,11 +354,13 @@ Two Frogs lived together in a marsh. But one hot summer the marsh dried up, and 
 :class: tip
 > 这篇文章的寓意是：不要尝试不可能的事情。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio282_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio282_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE FROGS AND THE OX
@@ -333,11 +371,13 @@ An Ox came down to a reedy pool to drink. As he splashed heavily into the water,
 :class: tip
 > Do not attempt the impossible.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio282.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio282.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -352,11 +392,13 @@ An Ox came down to a reedy pool to drink. As he splashed heavily into the water,
 :class: tip
 > 这篇文章的寓意是：尊重他人，不要做伤害别人的事情。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio308_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio308_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE BOYS AND THE FROGS
@@ -367,11 +409,13 @@ Some Boys were playing one day at the edge of a pond in which lived a family of 
 :class: tip
 > Always stop to think whether your fun may not be the cause of another's unhappiness.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio308.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio308.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -386,11 +430,13 @@ Some Boys were playing one day at the edge of a pond in which lived a family of 
 :class: tip
 > 这篇文章的寓意是：即使面临最艰难的情况，生命依旧具有可贵的价值，抓住机会，不要轻易放弃希望。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio325_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio325_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE HARES AND THE FROGS
@@ -401,11 +447,13 @@ Hares, as you know, are very timid, The least shadow, sends them scurrying in fr
 :class: tip
 > However unfortunate we may think we are there is always someone worse off than ourselves.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio325.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio325.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -420,11 +468,13 @@ Hares, as you know, are very timid, The least shadow, sends them scurrying in fr
 :class: tip
 > 寓意：无论环境发生什么变化，我们都要有警惕的眼睛，对未来充满准备，以免被不利影响。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio359_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio359_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE FIGHTING BULLS AND THE FROG
@@ -435,11 +485,13 @@ Two Bulls were fighting furiously in a field, at one side of which was a marsh. 
 :class: tip
 > When the great fall out, the weak must suffer for it.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio359.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio359.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -454,11 +506,13 @@ Two Bulls were fighting furiously in a field, at one side of which was a marsh. 
 :class: tip
 > 这篇文章的寓意是：勇敢追求梦想即使只是走出一小步，也可能带来意想不到的结果。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio370_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio370_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE FROG AND THE MOUSE
@@ -469,11 +523,13 @@ A young Mouse in search of adventure was running along the bank of a pond where 
 :class: tip
 > Those who seek to harm others often come to harm themselves through their own deceit.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio370.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio370.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -488,11 +544,13 @@ A young Mouse in search of adventure was running along the bank of a pond where 
 :class: tip
 > 此文的寓意是：只有自己精神和身体健康之后，才能真正帮助他人。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio386_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio386_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE QUACK TOAD
@@ -503,11 +561,13 @@ An old Toad once informed all his neighbors that he was a learned doctor. In fac
 :class: tip
 > Those who would mend others, should first mend themselves.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio386.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio386.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
