--- a/docs/source/fables/驴.md
+++ b/docs/source/fables/驴.md
@@ -11,11 +11,13 @@
 :class: tip
 > 好牌只能用一次，多了就无效。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio44_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio44_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND HIS BURDENS
@@ -26,11 +28,13 @@ A Pedlar who owned an Ass one day bought a quantity of salt, and loaded up his b
 :class: tip
 > You may play a good card once too often.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio44.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio44.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -45,11 +49,13 @@ A Pedlar who owned an Ass one day bought a quantity of salt, and loaded up his b
 :class: tip
 > 人们往往为小事争吵不休,从而失去了最重要的东西。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio50_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio50_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND HIS SHADOW
@@ -60,11 +66,13 @@ A certain man hired an Ass for a journey in summertime, and started out with the
 :class: tip
 > Fighting over small matters is not worth it and can even end up costing you more than you bargained for.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio50.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio50.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -79,11 +87,13 @@ A certain man hired an Ass for a journey in summertime, and started out with the
 :class: tip
 > 外表虽然可以暂时掩盖一个人的缺点,但它很容易被揭穿。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio60_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio60_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS IN THE LION'S SKIN
@@ -94,11 +104,13 @@ An Ass found a Lion's Skin, and dressed himself up in it. Then he went about fri
 :class: tip
 > Fine clothes may disguise, but silly words will disclose a fool.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio60.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio60.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -113,11 +125,13 @@ An Ass found a Lion's Skin, and dressed himself up in it. Then he went about fri
 :class: tip
 > 当我们面临危机时，如果不积极主动改变，我们可能会处于更糟的境地。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio98_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio98_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND THE OLD PEASANT
@@ -128,11 +142,13 @@ An old Peasant was sitting in a meadow watching his Ass, which was grazing close
 :class: tip
 > Think ahead and plan for potential problems, rather than relying on outside help when difficult situations arise.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio98.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio98.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -147,11 +163,13 @@ An old Peasant was sitting in a meadow watching his Ass, which was grazing close
 :class: tip
 > 强者为王。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio105_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio105_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE LION AND THE WILD ASS
@@ -162,11 +180,13 @@ A Lion and a Wild Ass went out hunting together: the latter was to run down the 
 :class: tip
 > Might makes right.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio105.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio105.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -181,11 +201,13 @@ A Lion and a Wild Ass went out hunting together: the latter was to run down the 
 :class: tip
 > 这篇文章的寓意是：协作可以实现更大的成就，强者也要认识到自身的不足和他人的可贵之处。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio127_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio127_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE LION AND THE ASS
@@ -196,11 +218,13 @@ A Lion and an Ass set up as partners and went a-hunting together. In course of t
 :class: tip
 > Moral: Even though you may not have the strength of those around you, your cunning can still make a difference.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio127.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio127.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -215,11 +239,13 @@ A Lion and an Ass set up as partners and went a-hunting together. In course of t
 :class: tip
 > 盲目的自信通常会导致失败。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio158_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio158_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS, THE COCK, AND THE LION
@@ -230,11 +256,13 @@ An Ass and a Cock were in a cattle-pen together. Presently a Lion, who had been 
 :class: tip
 > False confidence often leads to disaster.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio158.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio158.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -249,11 +277,13 @@ An Ass and a Cock were in a cattle-pen together. Presently a Lion, who had been 
 :class: tip
 > 这篇文章寓意: 努力讨好所有人其实无异于让自己落空，应当正确判断形势，自行做出恰当的决定。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio169_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio169_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE MILLER, HIS SON, AND THEIR ASS
@@ -269,11 +299,13 @@ again, convinced that in trying to please all he had pleased none, and had lost 
 :class: tip
 > Moral of the story: When trying to please everyone, you may end up pleasing no one and losing something valuable in the process.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio169.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio169.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -288,11 +320,13 @@ again, convinced that in trying to please all he had pleased none, and had lost 
 :class: tip
 > 这篇文章的寓意是：遇到困难时，仁慈的善行会换来报答，而残忍的行为只会给自己带来懊悔。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio175_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio175_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND THE MULE
@@ -303,11 +337,13 @@ A certain man who had an Ass and a Mule loaded them both up one day and set out 
 :class: tip
 > Moral: Selfishness brings its own punishment.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio175.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio175.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -322,11 +358,13 @@ A certain man who had an Ass and a Mule loaded them both up one day and set out 
 :class: tip
 > 寓意是：在面对危险时，要有反思能力，否则自己将陷入死亡的危险。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio179_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio179_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND HIS DRIVER
@@ -337,11 +375,13 @@ An Ass was being driven down a mountain road, and after jogging along for a whil
 :class: tip
 > A single moment of recklessness can lead to disaster; be sure to think things through before you act.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio179.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio179.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -356,11 +396,13 @@ An Ass was being driven down a mountain road, and after jogging along for a whil
 :class: tip
 > 物以类聚，人以群分。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio187_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio187_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND HIS PURCHASER
@@ -371,11 +413,13 @@ A Man who wanted to buy an Ass went to market, and, coming across a likely-looki
 :class: tip
 > A man is known by the company he keeps.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio187.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio187.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -390,11 +434,13 @@ A Man who wanted to buy an Ass went to market, and, coming across a likely-looki
 :class: tip
 > 用昂贵代价换来的优势是令人怀疑的福气。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio196_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio196_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE PACK-ASS AND THE WILD ASS
@@ -406,11 +452,13 @@ Going up to him, he said, "What a lucky beast you are! Your sleek coat shows how
 :class: tip
 > Advantages that are dearly bought are doubtful blessings.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio196.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio196.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -425,11 +473,13 @@ Going up to him, he said, "What a lucky beast you are! Your sleek coat shows how
 :class: tip
 > 到了更坏的主人那里，才知道前主人的好。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio197_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio197_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND HIS MASTERS
@@ -440,11 +490,13 @@ A Gardener had an Ass which had a very hard time of it, what with scanty food, h
 :class: tip
 > Servants don't know a good master till they have served a worse.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio197.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio197.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -459,11 +511,13 @@ A Gardener had an Ass which had a very hard time of it, what with scanty food, h
 :class: tip
 > 除非能照顾好自己，否则做自己的主人一点儿用也没有。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio198_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio198_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE PACK-ASS, THE WILD ASS, AND THE LION
@@ -474,11 +528,13 @@ A Wild Ass saw a Pack-Ass jogging along under a heavy load, and taunted him with
 :class: tip
 > It is no use being your own master unless you can stand up for yourself.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio198.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio198.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -493,11 +549,13 @@ A Wild Ass saw a Pack-Ass jogging along under a heavy load, and taunted him with
 :class: tip
 > 那些夺走他人荣誉的人，必定会遭受沉重的打击。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio205_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio205_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS CARRYING THE IMAGE
@@ -508,11 +566,13 @@ A certain man put an Image on the back of his Ass to take it to one of the templ
 :class: tip
 > Rude shocks await those who take to themselves the credit that is due to others.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio205.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio205.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -527,11 +587,13 @@ A certain man put an Image on the back of his Ass to take it to one of the templ
 :class: tip
 > 这篇文章寓意是：即使被迫进行糟糕的临时组合，人们也应该做自己能力范围内的所有事。尽管面对困难，但仍应当慎重地思考，一方面以便化解矛盾，另一方面也能建立双赢的关系。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio224_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio224_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE PLOUGHMAN, THE ASS, AND THE OX
@@ -542,11 +604,13 @@ A Ploughman yoked his Ox and his Ass together, and set to work to plough his fie
 :class: tip
 > The moral of this story is that we should not expect those in a weaker position to always bear the brunt of the work and the responsibility.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio224.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio224.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -561,11 +625,13 @@ A Ploughman yoked his Ox and his Ass together, and set to work to plough his fie
 :class: tip
 > 这篇文章的寓意是：傲慢无礼定会有报应，要记住谦虚有礼才是上策。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio269_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio269_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE HORSE AND THE ASS
@@ -576,11 +642,13 @@ A Horse, proud of his fine harness, met an Ass on the high-road. As the Ass with
 :class: tip
 > The moral of this story is that pride comes before a fall and humility brings true greatness.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio269.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio269.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -595,11 +663,13 @@ A Horse, proud of his fine harness, met an Ass on the high-road. As the Ass with
 :class: tip
 > 这里的寓意是，即使你有决定自己要走的路，有时候有人可以帮助你把你带回正确的路上。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio293_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio293_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND HIS DRIVER
@@ -610,11 +680,13 @@ An Ass was being driven along a road leading down the mountain side, when he sud
 :class: tip
 > They who will not listen to reason but stubbornly go their own way against the friendly advice of those who are wiser than they, are on the road to misfortune.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio293.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio293.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -629,11 +701,13 @@ An Ass was being driven along a road leading down the mountain side, when he sud
 :class: tip
 > 这篇文章寓意是：不要用自己的傲慢或嘲笑来伤害尊严，要学会尊重他人，并超越他人的无知。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio302_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio302_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE LION AND THE ASS
@@ -644,11 +718,13 @@ One day as the Lion walked proudly down a forest aisle, and the animals respectf
 :class: tip
 > Do not resent the remarks of a fool. Ignore them.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio302.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio302.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -663,11 +739,13 @@ One day as the Lion walked proudly down a forest aisle, and the animals respectf
 :class: tip
 > 寓意是：有时候，失去会让你受益。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio314_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio314_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND THE LOAD OF SALT
@@ -678,11 +756,13 @@ A Merchant, driving his Ass homeward from the seashore with a heavy load of salt
 :class: tip
 > The same measures will not suit all circumstances.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio314.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio314.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -697,11 +777,13 @@ A Merchant, driving his Ass homeward from the seashore with a heavy load of salt
 :class: tip
 > 这篇文章强调了团队合作的重要性：一个人无法完成复杂的任务，但如果把所有人的优势汇集起来，就可以取得更好的结果。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio334_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio334_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE LION AND THE ASS
@@ -712,11 +794,13 @@ A Lion and an Ass agreed to go hunting together. In their search for game the hu
 :class: tip
 > The loud-mouthed boaster does not impress nor frighten those who know him.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio334.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio334.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -731,11 +815,13 @@ A Lion and an Ass agreed to go hunting together. In their search for game the hu
 :class: tip
 > 通过对自然界的尊重和保护，我们可以保护我们共同的家园。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio349_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio349_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND THE GRASSHOPPERS
@@ -746,11 +832,13 @@ One day as an Ass was walking in the pasture, he found some Grasshoppers chirpin
 :class: tip
 > The laws of nature are unchangeable.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio349.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio349.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -765,11 +853,13 @@ One day as an Ass was walking in the pasture, he found some Grasshoppers chirpin
 :class: tip
 > 这篇文章的寓意是: 在炎热的天气里，即使有困难，也应该设法停下来休息，以确保安全。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio409_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio409_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS AND HIS SHADOW
@@ -780,11 +870,13 @@ A Traveler had hired an Ass to carry him to a distant part of the country. The o
 :class: tip
 > In quarreling about the shadow we often lose the substance.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio409.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio409.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -799,11 +891,13 @@ A Traveler had hired an Ass to carry him to a distant part of the country. The o
 :class: tip
 > 寓意是：有时候慢条斯理的行事方式可能会被嘲笑，但往往会给你带来更好的结果。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio410_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio410_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE MILLER, HIS SON, AND THE ASS
@@ -814,11 +908,13 @@ One day, a long time ago, an old Miller and his Son were on their way to market 
 :class: tip
 > If you try to please all, you please none.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio410.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio410.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
@@ -833,11 +929,13 @@ One day, a long time ago, an old Miller and his Son were on their way to market 
 :class: tip
 > 一个傻瓜可能会被他的衣着和外表所欺骗，但他的话很快就会显示出他的真实身份。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 听寓言故事
 
-<audio src='//quantile.shangfr.site/fables/audio423_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio423_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+
+```
+
+ 
 :::
 :::{tab-item} English
 ## THE ASS IN THE LION'S SKIN
@@ -848,11 +946,13 @@ An Ass found a Lion's skin left in the forest by a hunter. He dressed himself in
 :class: tip
 > A fool may deceive by his dress and appearance, but his words will soon show what he really is.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
-```
-
 👇 Listen to this fable
 
-<audio src='//quantile.shangfr.site/fables/audio423.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='http://quantile.shangfr.site/fables/audio423.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+
+```
+
+ 
 :::
 ::::
     
